--- a/templates/admin_user_details.html
+++ b/templates/admin_user_details.html
@@ -1,12 +1,12 @@
 {% extends "admin_layout.html" %}
 
 {% block admin_title %}User Details{% endblock %}
-
+{% block page_header %}Manage Users {% endblock %}
 {% block admin_content %}
     <section class="panel">
 
               <div class="panel-body">
-                <a href="#myModal" data-toggle="modal" class="btn btn-primary">
+                <a href="#myModal" data-toggle="modal" class="btn btn-primary pull-right">
                                   Add User
                               </a>
 
@@ -15,37 +15,78 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                        <h4 class="modal-title">Form Tittle</h4>
+                        <h4 class="modal-title">Add User</h4>
                       </div>
                       <div class="modal-body">
+                          <form class="form-validate form-horizontal " id="register_form" method="POST" action="{{ url_for('add_user') }}">
+                            <div class="form-group ">
+                              <label for="fullname" class="control-label col-lg-3">Full name <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                <input class=" form-control" id="fullname" name="fullname" type="text" />
+                              </div>
+                            </div>
+                            <div class="form-group ">
+                              <label for="address" class="control-label col-lg-3">Address <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                <input class=" form-control" id="address" name="address" type="text" />
+                              </div>
+                            </div>
+                            <div class="form-group ">
+                                  <label for="city" class="control-label col-lg-3">City <span class="required">*</span></label>
+                                  <div class="col-lg-9">
+                                    <input class="form-control " id="email" name="city" type="text" />
+                                  </div>
+                            </div>
+                             <div class="form-group ">
+                              <label for="email" class="control-label col-lg-3">Email <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                <input class="form-control " id="email" name="email" type="email" />
+                              </div>
+                            </div>
+                              <div class="form-group ">
+                                  <label for="phone" class="control-label col-lg-3">Phone <span class="required">*</span></label>
+                                  <div class="col-lg-9">
+                                    <input class="form-control " id="phone" name="phone" type="number" />
+                                  </div>
+                              </div>
+                            <div class="form-group ">
+                              <label for="password" class="control-label col-lg-3">Password <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                <input class="form-control " id="password" name="password" type="password" />
+                              </div>
+                            </div>
+                              <div class="form-group ">
+                                  <label for="confirm_password" class="control-label col-lg-3">Confirm Password <span class="required">*</span></label>
+                                  <div class="col-lg-9">
+                                    <input class="form-control " id="confirm_password" name="confirm_password" type="password" />
+                                  </div>
+                              </div>
 
-                        <form role="form">
-                          <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
-                          </div>
-                          <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
-                          </div>
-                          <div class="form-group">
-                            <label for="exampleInputFile">File input</label>
-                            <input type="file" id="exampleInputFile3">
-                            <p class="help-block">Example block-level help text here.</p>
-                          </div>
-                          <div class="checkbox">
-                            <label>
-                                                          <input type="checkbox"> Check me out
-                                                      </label>
-                          </div>
-                          <button type="submit" class="btn btn-primary">Submit</button>
-                        </form>
+                            <div class="form-group">
+                              <div class="col-lg-offset-5 col-lg-6">
+                                <button class="btn btn-primary" type="submit">Register</button>
+                              </div>
+                            </div>
+                  </form>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </section>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="panel-body">
+                        <div class="alert alert-success alert-dismissable fade in" role="alert">
+                             <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+                              <strong>{{ message }}</strong>
+                        </div>
+                    </div>
+
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
 <div class="row">
           <div class="col-lg-12">
             <section class="panel">
@@ -56,29 +97,91 @@
               <table class="table table-striped table-advance table-hover">
                 <tbody>
                   <tr>
+                    <th><i class=""></i>#</th>
                     <th><i class="icon_profile"></i> Full Name</th>
-                    <th><i class="icon_calendar"></i> Date</th>
-                    <th><i class="icon_mail_alt"></i> Email</th>
-                    <th><i class="icon_pin_alt"></i> City</th>
-                    <th><i class="icon_mobile"></i> Mobile</th>
+                    <th><i class="icon_globe"></i> Address</th>
+                    <th><i class="icon_map_alt"></i> City</th>
+                    <th><i class="icon_mail"></i> Email</th>
+                    <th><i class="icon_mobile"></i> Phone</th>
                     <th><i class="icon_cogs"></i> Action</th>
                   </tr>
+                  {% for row in users %}
                   <tr>
-                    <td>Angeline Mcclain</td>
-                    <td>2004-07-06</td>
-                    <td>dale@chief.info</td>
-                    <td>Rosser</td>
-                    <td>176-026-5992</td>
+                    <td>{{ row.id }}</td>
+                    <td>{{ row.fullname }}</td>
+                    <td>{{ row.address}}</td>
+                    <td>{{ row.city }}</td>
+                    <td>{{ row.email }}</td>
+                    <td>{{ row.phone }}</td>
                     <td>
                       <div class="btn-group">
-                        <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                        <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                        <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
+                        <a href="/update/{{ row.id }}" data-toggle="modal" class="btn btn-primary" data-target="#myeditModal{{ row.id }}"><i class="icon_pencil-edit"></i></a>
+                        <a href="/delete/{{ row.id }}"  class="btn btn-danger" onclick="return confirm('Are You Sure To Delete ? ')"><i class="icon_close_alt2"></i></a>
                       </div>
                     </td>
                   </tr>
+                {% endfor %}
                 </tbody>
               </table>
+                {% for row in users %}
+                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myeditModal{{ row.id }}" class="modal fade">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                        <h4 class="modal-title">Update User</h4>
+                      </div>
+                      <div class="modal-body">
+                          <form class="form-validate form-horizontal " id="register_form" method="POST" action="{{ url_for('update_user') }}">
+                            <div class="form-group ">
+                              <label for="fullname" class="control-label col-lg-3">Full name <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                  <input type="hidden" name="id" value="{{ row.id }}">
+                                <input class=" form-control" id="fullname" value={{ row.fullname }} name="fullname" type="text" />
+                              </div>
+                            </div>
+                            <div class="form-group ">
+                              <label for="address" class="control-label col-lg-3">Address <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                <input class=" form-control" id="address" value={{ row.address }} name="address" type="text" />
+                              </div>
+                            </div>
+                            <div class="form-group ">
+                                  <label for="city" class="control-label col-lg-3">City <span class="required">*</span></label>
+                                  <div class="col-lg-9">
+                                    <input class="form-control " id="email" value={{ row.city }} name="city" type="text" />
+                                  </div>
+                            </div>
+                             <div class="form-group ">
+                              <label for="email" class="control-label col-lg-3">Email <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                <input class="form-control " id="email" value={{ row.email }} name="email" type="email" />
+                              </div>
+                            </div>
+                              <div class="form-group ">
+                                  <label for="phone" class="control-label col-lg-3">Phone <span class="required">*</span></label>
+                                  <div class="col-lg-9">
+                                    <input class="form-control " id="phone" value={{ row.phone }} name="phone" type="number" />
+                                  </div>
+                              </div>
+                            <div class="form-group ">
+                              <label for="password" class="control-label col-lg-3">Password <span class="required">*</span></label>
+                              <div class="col-lg-9">
+                                <input class="form-control " id="password" value={{ row.password }} name="password" type="password" />
+                              </div>
+                            </div>
+
+                            <div class="form-group">
+                              <div class="col-lg-offset-5 col-lg-6">
+                                <button class="btn btn-primary" type="submit">Update</button>
+                              </div>
+                            </div>
+                  </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endfor %}
             </section>
           </div>
         </div>
