--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="{{ url_for('static',filename='img/favicon.png') }}">
 
   <title>{% block admin_title %}{% endblock %}</title>
-
+<link rel="shortcut icon" type="image/png" href="{{ url_for('static',filename='img/charity.png') }}">
   <!-- Bootstrap CSS -->
   <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
   <!-- bootstrap theme -->
@@ -270,7 +270,7 @@
                             <span class="profile-ava">
                                 <img alt="" src="img/avatar1_small.jpg">
                             </span>
-                            <span class="username">Jenifer Smith</span>
+                            <span class="username">{{ session['user'] }}</span>
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
@@ -288,7 +288,7 @@
                 <a href="#"><i class="icon_chat_alt"></i> Chats</a>
               </li>
               <li>
-                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                <a href="{{ url_for('logout') }}"><i class="icon_key_alt"></i> Log Out</a>
               </li>
               <li>
                 <a href="documentation.html"><i class="icon_key_alt"></i> Documentation</a>
