--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -25,10 +25,22 @@
                         <input class=" form-control" id="address" name="address" type="text" />
                       </div>
                     </div>
+                    <div class="form-group ">
+                      <label for="city" class="control-label col-lg-2">City <span class="required">*</span></label>
+                      <div class="col-lg-10">
+                        <input class="form-control " id="city" name="city" type="text" />
+                      </div>
+                    </div>
                      <div class="form-group ">
                       <label for="email" class="control-label col-lg-2">Email <span class="required">*</span></label>
                       <div class="col-lg-10">
                         <input class="form-control " id="email" name="email" type="email" />
+                      </div>
+                    </div>
+                    <div class="form-group ">
+                      <label for="phone" class="control-label col-lg-2">Phone <span class="required">*</span></label>
+                      <div class="col-lg-10">
+                        <input class="form-control " id="phone" name="phone" type="number" />
                       </div>
                     </div>
                     <div class="form-group ">
