--- a/templates/layout01.html
+++ b/templates/layout01.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="{{ url_for('static',filename='img/favicon.png') }}">
 
   <title>{% block title %}{% endblock %}</title>
-
+  <link rel="shortcut icon" type="image/png" href="{{ url_for('static',filename='img/charity.png') }}">
   <!-- Bootstrap CSS -->
   <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
   <!-- bootstrap theme -->
@@ -49,7 +49,7 @@
       </div>
 
       <!--logo start-->
-      <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+      <a href="{{ url_for('dashboard') }}" class="logo">Charity <span class="lite">Donation</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -74,7 +74,7 @@
                             <span class="profile-ava">
                                 <img alt="" src="{{ url_for('static',filename='img/avatar1_small.jpg') }}">
                             </span>
-                            <span class="username">Vaghesh Patel</span>
+                            <span class="username">{{ session['user'] }}</span>
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
@@ -92,7 +92,7 @@
                 <a href="#"><i class="icon_chat_alt"></i> Chats</a>
               </li>
               <li>
-                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                <a href="{{ url_for('logout') }}"><i class="icon_key_alt"></i> Log Out</a>
               </li>
               <li>
                 <a href="documentation.html"><i class="icon_key_alt"></i> Documentation</a>
@@ -115,13 +115,13 @@
         <!-- sidebar menu start-->
         <ul class="sidebar-menu">
           <li class="">
-            <a class="" href="index.html">
+            <a class="" href="{{ url_for('dashboard') }}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
           </li>
           <li class="sub-menu">
-            <a href="{{ url_for('charity_details') }}" class="">
+            <a href="{{ url_for('charity_Details') }}" class="">
                           <i class="icon_archive_alt"></i>
                           <span>Charity Details</span>
                       </a>
@@ -151,7 +151,7 @@
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa fa-bars"></i>{% block pagename %}{% endblock %}</h3>
             <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+              <li><i class="fa fa-home"></i><a href="{{ url_for('index') }}">Home</a></li>
               <li><i class="fa fa-bars"></i>Pages</li>
               <li><i class="fa fa-square-o"></i>Pages</li>
             </ol>
