--- a/templates/layout0.html
+++ b/templates/layout0.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="{{ url_for('static',filename='img/favicon.png') }}">
 
   <title>{% block title %}{% endblock %}</title>
+  <link rel="shortcut icon" type="image/png" href="{{ url_for('static',filename='img/charity.png') }}">
 
   <!-- Bootstrap CSS -->
   <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
@@ -49,7 +50,7 @@
       </div>
 
       <!--logo start-->
-      <a href="" class="logo">Nice <span class="lite">Admin</span></a>
+      <a href="{{ url_for('index') }}" class="logo">Charity<span class="lite">Donation</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -72,21 +73,19 @@
             <li id="task_notificatoin_bar" class="dropdown">
             <a href="{{ url_for('index') }}">
                             <i class="icon_house"></i>
-                            <span class="">Home</span>
+                            <span class="">HOME</span>
                         </a>
 
           </li>
           <li id="task_notificatoin_bar" class="dropdown">
             <a href="{{ url_for('login') }}">
-                            <i class="icon_lock-open"></i>
-                            <span class="">Login</span>
+                            <span class="">LOGIN</span>
                         </a>
 
           </li>
             <li id="task_notificatoin_bar" class="dropdown">
             <a href="{{ url_for('sign_in') }}">
-                            <i class="icon_profile"></i>
-                            <span class="">Sign-in</span>
+                            <span class="">SIGN UP</span>
             </a>
 
           </li>
