--- a/templates/admin_user_details.html
+++ b/templates/admin_user_details.html
@@ -1,7 +1,13 @@
 {% extends "admin_layout.html" %}
 
-{% block admin_title %}User Details{% endblock %}
-{% block page_header %}Manage Users {% endblock %}
+{% block admin_title %}Users Detail{% endblock %}
+{% block page_header %}Users Detail {% endblock %}
+{% block page_define %}
+            <ol class="breadcrumb">
+              <li><i class="fa fa-home"></i><a href="{{ url_for('user_details') }}">Home</a></li>
+              <li><i class="fa fa-users"></i>Users Detail</li>
+            </ol>
+{% endblock %}
 {% block admin_content %}
     <section class="panel">
 
@@ -74,11 +80,11 @@
                 </div>
               </div>
             </section>
-        {% with messages = get_flashed_messages() %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
-                {% for message in messages %}
+                {% for category,message in messages %}
                     <div class="panel-body">
-                        <div class="alert alert-success alert-dismissable fade in" role="alert">
+                        <div class="alert alert-{{ category }} alert-dismissable fade in" role="alert">
                              <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
                               <strong>{{ message }}</strong>
                         </div>
@@ -91,7 +97,7 @@
           <div class="col-lg-12">
             <section class="panel">
               <header class="panel-heading">
-                Users Details
+                Users Detail
               </header>
 
               <table class="table table-striped table-advance table-hover">
@@ -115,8 +121,8 @@
                     <td>{{ row.phone }}</td>
                     <td>
                       <div class="btn-group">
-                        <a href="/update/{{ row.id }}" data-toggle="modal" class="btn btn-primary" data-target="#myeditModal{{ row.id }}"><i class="icon_pencil-edit"></i></a>
-                        <a href="/delete/{{ row.id }}"  class="btn btn-danger" onclick="return confirm('Are You Sure To Delete ? ')"><i class="icon_close_alt2"></i></a>
+                        <a href="/update_user/{{ row.id }}" data-toggle="modal" class="btn btn-primary" data-target="#myeditModal{{ row.id }}"><i class="icon_pencil-edit"></i></a>
+                        <a href="/delete_user/{{ row.id }}"  class="btn btn-danger" onclick="return confirm('Are You Sure To Delete ? ')"><i class="icon_close_alt2"></i></a>
                       </div>
                     </td>
                   </tr>
