--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -324,7 +324,7 @@
             </a>
           </li>
           <li class="sub-menu">
-            <a href="javascript:;" class="">
+            <a href="{{ url_for('charity_details') }}" class="">
                           <i class="icon_book_alt"></i>
                           <span>Add Post</span>
                       </a>
@@ -362,7 +362,7 @@
       <section class="wrapper">
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa fa-bars"></i> Pages</h3>
+            <h3 class="page-header"><i class="fa fa fa-bars"></i> {% block page_header %}{% endblock %}</h3>
             <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="{{ url_for('user_details') }}">Home</a></li>
               <li><i class="fa fa-bars"></i>Pages</li>
